<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whale">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/edit_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint"
                android:inputType="text" />

            <TextView
                style="@style/QuestionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/bird" />

            <CheckBox
                android:id="@+id/check_box1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer" />

            <CheckBox
                android:id="@+id/check_box2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer2" />

            <CheckBox
                android:id="@+id/check_box3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer3" />

            <CheckBox
                android:id="@+id/check_box4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer4" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/quiz_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_view"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                style="@style/QuestionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/quiz_1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/quiz_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/answer_1a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/answer_1_a" />

                    <RadioButton
                        android:id="@+id/answer_1b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/answer_1_b" />

                    <RadioButton
                        android:id="@+id/answer_1c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/answer_1_c" />

                    <RadioButton
                        android:id="@+id/answer_1d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/answer_1_d" />
                </RadioGroup>

            </LinearLayout>

            <TextView
                style="@style/QuestionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/quiz_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/quiz_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/answer_2a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/answer_2_a" />

                    <RadioButton
                        android:id="@+id/answer_2b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/answer_2_b" />

                    <RadioButton
                        android:id="@+id/answer_2c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/answer_2_c" />

                    <RadioButton
                        android:id="@+id/answer_2d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/answer_2_d" />

                </RadioGroup>

            </LinearLayout>


            <TextView
                style="@style/QuestionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/quiz_3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/quiz_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/answer_3a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/answer_3_a" />

                    <RadioButton
                        android:id="@+id/answer_3b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/answer_3_b" />

                    <RadioButton
                        android:id="@+id/answer_3c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/answer_3_c" />

                    <RadioButton
                        android:id="@+id/answer_3d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/answer_3_d" />
                </RadioGroup>

            </LinearLayout>

            <TextView
                style="@style/QuestionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/quiz_4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/quiz_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/answer_4a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/answer_4_a" />

                    <RadioButton
                        android:id="@+id/answer_4b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/answer_4_b" />

                    <RadioButton
                        android:id="@+id/answer_4c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/answer_4_c" />

                    <RadioButton
                        android:id="@+id/answer_4d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/answer_4_d" />
                </RadioGroup>

            </LinearLayout>

            <TextView
                style="@style/QuestionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/quiz_5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/quiz_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/answer_5a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/answer_5_a" />

                    <RadioButton
                        android:id="@+id/answer_5b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/answer_5_b" />

                    <RadioButton
                        android:id="@+id/answer_5c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/answer_5_c" />

                    <RadioButton
                        android:id="@+id/answer_5d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/answer_5_d" />
                </RadioGroup>


            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:text="@string/submit"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold" />


    </RelativeLayout>
</ScrollView>